# wallis-pcf-lean4

./: .env.example  .gitignore  66_pilot_results.json  AGENT_HEALTH_SCORE.md  CLAIM_VERIFICATION.md  CONTRIBUTING.md  CollatzBirkhoff.lean  CollatzSpectralGap.lean  DISCOVERY_REPORT.md  EPOCH5_COMMAND_CENTER.md  G01_Induction_Log.md  GCF_Borel_Lean4.lean  GTLB_Paper.html  HANDOFF_2026-04-14_403f575.md  HANDOFF_TEMPLATE.md  LICENSE  QLID_Paper.html  RAMANUJAN_FAST_AGENT_DESIGN_NOTE.md  README.md  REPRODUCE.md  REPRODUCE.txt  RESEARCH_PROTOCOL.md  REVIEW_RESPONSE.md  SELF_ITERATING_BREAKTHROUGH_AGENT_PROMPT.md  V_quad_export_bundle.txt  _add_sections_v5.py  _add_sections_v6.py  _add_sections_v7.py  _analyze_deep_sweep.py  _analyze_discoveries.py  _analyze_kloosterman_sweep.py  _analyze_run.py  _apery_m_family_scan.py  _arxiv_check.py  _audit_tex.py  _bench_timing.py  _bridge_auto_responder.py  _build_aria_review.py  _build_html_v5.py  _build_html_v6.py  (+717 more)
G01_Induction/: g01_master_engine.py
PCF Arithmetic Classification Theorem/: placeholder.tex
agent_state/: _sandbox_5a3a52a9.py  agent_state.json  failures.jsonl  frontier_state.json  iterations.jsonl  memory.json
aria/: __init__.py  __main__.py  axiom_bank.py  conjecture_engine.py  encoder.py  ingestion.py  orchestrator.py  output.py  synthesis.py  verifier.py
breakthroughs/: H-0025_Final.md
collatz/: CycleExclusion.lean  Defs.lean  Estimates.lean  Main.lean  PROOF_SKETCH.md  README.md  Spectral.lean  TODO.md  lakefile.lean
harvest/: 66_pilot_seeds.json  conductor_clusters.json  independence_candidates.json  mutant_harvest.json
lean/: WallisFamily.lean  lakefile.lean
materials_microlaws/: README.md  __init__.py  constraints.py  data_loader.py  evaluation.py  iteration_loop.py  representation.py  requirements.txt  run_experiment.py  symbolic_regression.py  theory.py
micro_laws_discovery/: README.md  __init__.py  __main__.py  controller.py  dimensional.py  evaluation.py  main.py  nbody.py  requirements.txt  surrogate.py  symbolic_engine.py
multi_agent_discovery/: __init__.py  agents.py  blackboard.py  breakthrough_runner.py  breakthrough_runner_v10.py  breakthrough_runner_v11.py  breakthrough_runner_v12.py  breakthrough_runner_v13.py  breakthrough_runner_v14.py  breakthrough_runner_v2.py  breakthrough_runner_v3.py  breakthrough_runner_v4.py  breakthrough_runner_v5.py  breakthrough_runner_v6.py  breakthrough_runner_v7.py  (+6 more)
(+675 files in other folders)
